--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/semantic-ui-css/semantic.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.js"
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/semantic-ui-css/semantic.js"
             ]
           },
           "configurations": {
